--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,439 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+@import url("https://fonts.googleapis.com/css?family=Poppins");
+@import url("https://fonts.googleapis.com/css?family=Leckerli+One&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins";
+  font-size: 16px;
+}
+
+.home-page {
+  height: 700px;
+  background-image: url(/background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 5%;
+}
+
+.brand-box {
+  font-family: "Leckerli One";
+  display: flex;
+  align-items: center;
+  font-size: 1.8em;
+  width: 300px;
+}
+
+nav {
+  background-image: linear-gradient(
+    rgba(77, 141, 201, 0.527),
+    rgba(77, 141, 201, 0)
+  );
+  text-shadow: white 0 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+}
+
+.car-logo {
+  width: 50px;
+  border: 2px solid white;
+  border-radius: 10px;
+  margin-right: 7%;
+}
+
+.nav-links ul {
+  font-size: 1.2em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  width: 800px;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #0781b9;
+}
+
+.nav-links ul a {
+  color: black;
+}
+
+.search-box {
+  color: #474747;
+  background-color: rgba(255, 255, 255, 0.774);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 500px;
+  border-radius: 2%;
+  box-shadow: 1px 1px 5px 0 black;
+  height: 500px;
+  /* margin-top: 5%; */
+  margin-left: 9%;
+  padding: 1%;
+}
+
+.search-box h3 {
+  font-size: 2em;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  height: 80%;
+  padding-top: 6%;
+}
+
+.message {
+  color: red;
+  font-weight: bold;
+}
+
+.search-location {
+  font-size: 1.1em;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 80%;
+}
+
+.search-date {
+  font-size: 1em;
+  display: flex;
+  justify-content: space-between;
+  text-emphasis: none;
+  text-align: left;
+  width: 80%;
+}
+
+.search-date-from {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+}
+
+.search-date-to {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+}
+
+.search-form input {
+  font-family: "Poppins";
+  font-size: 1em;
+  padding: 1%;
+  border-radius: 0.2em;
+}
+
+.search-long-term {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 16%;
+}
+
+.search-long-term a {
+  font-size: 1.2em;
+  color: #0781b9;
+  text-decoration: none;
+}
+
+.search-box button {
+  font-size: 2em;
+  color: white;
+  box-shadow: 1px 1px 5px 0 gray;
+  background-color: #30ac65;
+  padding: 2.5% 19%;
+  margin-bottom: 5%;
+  border-radius: 0.2em;
+}
+
+.search-box a {
+  text-decoration: none;
+}
+
+/* listing page */
+.available-spots {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 2%;
+  position: relative;
+}
+
+.available-spots a {
+  text-decoration: none;
+}
+
+.spot-listing {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+.listing-box ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  border-radius: 10px;
+  box-shadow: 1px 1px 5px 0 black;
+  padding: 3% 6% 3% 3%;
+  line-height: 2em;
+  margin-bottom: 3%;
+}
+
+.listing-box a {
+  color: black;
+}
+
+.listing-box-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.listing-box-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.book-button {
+  background-color: #0781b99d;
+  border: 1px solid black;
+  border-radius: 7px;
+  padding: 2% 1%;
+  width: 100px;
+  text-align: center;
+}
+
+.detail-button a {
+  color: blue;
+}
+
+.map {
+  width: 600px;
+  height: 500px;
+  box-shadow: 1px 1px 5px 0 black;
+}
+
+.detail {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 3%;
+  margin-bottom: 2%;
+}
+
+.detail a {
+  text-decoration: none;
+}
+
+.detail-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.detail-top a {
+  color: black;
+}
+
+.detail-bottom {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.spot-details {
+  background-color: rgba(255, 255, 255, 0.774);
+  border-radius: 2%;
+  box-shadow: 1px 1px 5px 0 black;
+  width: 40%;
+  height: 83%;
+  padding: 1% 2% 1% 1%;
+}
+
+.spot-details span {
+  font-weight: bold;
+}
+
+.auth {
+  display: flex;
+  justify-content: center;
+}
+
+.auth-form {
+  background-color: rgba(255, 255, 255, 0.774);
+  text-align: center;
+  height: 300px;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 2%;
+  box-shadow: 1px 1px 5px 0 black;
+  padding-top: 3%;
+  margin-top: 5%;
+  padding-bottom: 3%;
+}
+
+.auth-inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.auth-inputs button {
+  width: 20%;
+  padding: 2%;
+}
+
+.auth-inputs input {
+  width: 40%;
+  font-family: "Poppins";
+  padding: 1%;
+  border-radius: 0.2em;
+}
+
+.add-edit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2%;
+}
+
+.add-edit-form {
+  background-color: rgba(255, 255, 255, 0.774);
+  border-radius: 2%;
+  box-shadow: 1px 1px 5px 0 black;
+  width: 500px;
+  padding-top: 3%;
+  padding: 3%;
+  line-height: 2em;
+  margin-bottom: 2%;
+}
+
+.add-edit-form input {
+  font-family: "Poppins";
+  padding: 0.5%;
+  border-radius: 0.2em;
+}
+
+.add-edit-form button {
+  width: 100%;
+  padding: 2%;
+  font-size: 1.5em;
+}
+
+.add-edit a {
+  text-decoration: none;
+}
+
+.error-message {
+  color: red;
+  font-weight: bold;
+}
+
+/* .spot-gen-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+} */
+
+.bookings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 2%;
+}
+
+.bookings-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 2%;
+  box-shadow: 1px 1px 5px 0 black;
+  width: 600px;
+  padding: 3% 0;
+  margin: 2%;
+}
+
+.listings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 2%;
+}
+
+.listings-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 2%;
+  box-shadow: 1px 1px 5px 0 black;
+  width: 600px;
+  padding: 3% 2%;
+  margin: 2%;
+}
+
+.listings button {
+  padding: 2% 4%;
+}
+
+.no-bookings-listings {
+  padding-top: 5%;
+  text-align: center;
+}
+
+.book-spot {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2%;
+}
+
+.book-spot-form {
+  background-color: rgba(255, 255, 255, 0.774);
+  text-align: center;
+  height: 300px;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 2%;
+  box-shadow: 1px 1px 5px 0 black;
+  padding: 3%;
+  margin-top: 5%;
+  padding-bottom: 3%;
+}
+
+.book-spot-form button {
+  width: 100%;
+  padding: 2%;
+  font-size: 30px;
+}
+
+.book-spot-inputs input {
+  width: 40%;
+  font-family: "Poppins";
+  padding: 1%;
+  border-radius: 0.2em;
 }
