--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,6 +48,7 @@
   background-image: url(/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  height: 1100px;
 }
 
 body {
@@ -217,6 +218,11 @@ nav {
 
 .available-spots a {
   text-decoration: none;
+}
+
+.no-parking-available {
+  text-align: center;
+  padding-top: 50px;
 }
 
 .spot-listing {
@@ -421,6 +427,8 @@ nav {
   text-align: center;
   margin-top: 2%;
   padding-bottom: 3%;
+  height: 900px;
+  overflow-y: auto;
 }
 
 .bookings-info {
@@ -442,6 +450,8 @@ nav {
   text-align: center;
   margin-top: 2%;
   padding-bottom: 3%;
+  height: 900px;
+  overflow-y: auto;
 }
 
 .listings-info {
